_sources/api/gen/other/2.5.1/classes/domain_TripLocationHistory.TripLocationHistory.md.txt
# Class: TripLocationHistory

[domain/TripLocationHistory](../modules/domain_TripLocationHistory.md).TripLocationHistory

## Constructors

### constructor

**new TripLocationHistory**(`locationHistory`, `etaSeconds`, `distanceToDestinationMeters`)

An array of locations represents the history of the trip

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `locationHistory` | [`Location`](domain_Location.Location.md)[] | location array |
| `etaSeconds` | `number` | 'estimated time of arrival' in seconds |
| `distanceToDestinationMeters` | `number` | Remaining driving distance until destination in meters (PREVIEW) |

## Properties

### distanceToDestinationMeters

 **distanceToDestinationMeters**: `number`

Remaining driving distance until destination in meters (PREVIEW)

___

### etaSeconds

 **etaSeconds**: `number`

'estimated time of arrival' in seconds

___

### locationHistory

 **locationHistory**: [`Location`](domain_Location.Location.md)[]

location array

## Methods

### fromJSON

`Static` **fromJSON**(`tripLocationHistory`): [`TripLocationHistory`](domain_TripLocationHistory.TripLocationHistory.md)

Create from JSON

#### Parameters

| Name | Type | Description |
| :------ | :------ | :------ |
| `tripLocationHistory` | `any` | JSON object |

#### Returns

[`TripLocationHistory`](domain_TripLocationHistory.TripLocationHistory.md)
